# ErikLibC

./: CMakeLists.txt  README.MD  x86_64.cmake
include/: errno.h  stdbool.h  stddef.h  stdlib.h  string.h
src/: errno.c  init.c  malloc.c  string.c
src/arch/x86_64/: crt0.S  crti.S  crtn.S
